--- a/index.html
+++ b/index.html
@@ -62,15 +62,16 @@
                     <div class="collapse navbar-collapse my-main-menu ">
 						<ul class="nav navbar-nav">
                             <li class=" active 00001"><a href="index.html">Accueil</a></li>
-                            <li class="dropdown 00002">
-                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button">A propos de notre site</a>
+                            
+                            <li class="">
+                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button">A propos de notre site<b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a class="inner-a" href="mot-de-bienvenue.html">Mot de bienvenue</a></li>
                                     <li><a  class="inner-a" href="qui-sommes-nous">Qui sommes-nous</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown 00002">
-                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Notre mission</a>
+                            <li class="">
+                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Notre mission<b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a class="inner-a"  href="notre-mission.html">Nos valeurs</a></li>
                                     <li><a class="inner-a"  href="notre-mission.html">Notre devise</a></li>
