--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
 						<ul class="nav navbar-nav">
                             <li class=" active 00001"><a href="index.html">Accueil</a></li>
                             
-                            <li class="">
-                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button">A propos de notre site<b class="caret"></b></a>
+                            <li class="dropdown ">
+                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button">A propos de notre site <i class="down"></i></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a class="inner-a" href="mot-de-bienvenue.html">Mot de bienvenue</a></li>
                                     <li><a  class="inner-a" href="qui-sommes-nous">Qui sommes-nous</a></li>
                                 </ul>
                             </li>
-                            <li class="">
-                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Notre mission<b class="caret"></b></a>
+                            <li class="dropdown ">
+                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Notre mission <i class="down"></i></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a class="inner-a"  href="notre-mission.html">Nos valeurs</a></li>
                                     <li><a class="inner-a"  href="notre-mission.html">Notre devise</a></li>
