--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                         <hr>
                         <h2>ATELIERS</h2>
                     </div>
-                    <div class="row">
+                    <div class="row p-5">
                         <div class="col-md-6">
                             <div class="advs-box">
                                 <div class="row">
