font awesome icons added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="public/Site/skin.css">
     
     <link rel="stylesheet" href="public/Site/HTWF/css/new.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
 
 	
 </head>
@@ -61,30 +62,30 @@
                     </div> 
                     <div class="collapse navbar-collapse my-main-menu ">
 						<ul class="nav navbar-nav">
-                            <li class=" active 00001"><a href="index.html">Accueil</a></li>
+                            <li class=" active 00001"><a href="index.html"><i class="fas fa-home icons-for-mobile-view" style="border: none"></i>Accueil</a></li>
                             
                             <li class="dropdown ">
-                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button">A propos de notre site <i class="down"></i></a>
+                                <a href="a-propos.html" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fas fa-info-circle icons-for-mobile-view" style="border: none"></i>A propos de notre site <i class="down"></i></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a class="inner-a" href="mot-de-bienvenue.html">Mot de bienvenue</a></li>
-                                    <li><a  class="inner-a" href="qui-sommes-nous">Qui sommes-nous</a></li>
+                                    <li><a class="inner-a" href="mot-de-bienvenue.html"><i class="fas fa-door-open icons-for-mobile-view" style="border: none"></i>Mot de bienvenue</a></li>
+                                    <li><a  class="inner-a" href="qui-sommes-nous"><i class="fas fa-question-circle icons-for-mobile-view" style="border: none"></i>Qui sommes-nous</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown ">
-                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Notre mission <i class="down"></i></a>
+                                <a href="notre-mission.html" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fas fa-chart-line icons-for-mobile-view" style="border: none"></i>Notre mission <i class="down"></i></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a class="inner-a"  href="notre-mission.html">Nos valeurs</a></li>
-                                    <li><a class="inner-a"  href="notre-mission.html">Notre devise</a></li>
+                                    <li><a class="inner-a"  href="notre-mission.html"><i class="fas fa-heart icons-for-mobile-view" style="border: none"></i>Nos valeurs</a></li>
+                                    <li><a class="inner-a"  href="notre-mission.html"><i class="fas fa-lightbulb icons-for-mobile-view" style="border: none"></i>Notre devise</a></li>
                                 </ul>
                             </li>
-                            <li class="00005"><a href="etudiants.html">Étudiants</a></li>
-                            <li class="00007"><a href="decideurs.html">Leadership</a></li>
-                            <li class="00003"><a href="parents.html">Parents</a></li>
-                            <li class="00004"><a href="dames.html">Mesdames</a></li>
-                            <li class="000010"><a href="ateliers.html">Ateliers</a></li>
-                            <li class="00006"><a href="articles.html">Articles</a></li>
-                            <li class="00009"><a href="ouvrages.html">Ouvrages</a></li>
-                            <li class="00008"><a href="contact.html">Contacts</a></li>
+                            <li class="00005"><a href="etudiants.html"><i class="fas fa-user-graduate icons-for-mobile-view" style="border: none"></i>Étudiants</a></li>
+                            <li class="00007"><a href="decideurs.html"><i class="fas fa-chalkboard-teacher icons-for-mobile-view" style="border: none"></i>Leadership</a></li>
+                            <li class="00003"><a href="parents.html"><i class="fas fa-restroom icons-for-mobile-view" style="border: none"></i>Parents</a></li>
+                            <li class="00004"><a href="dames.html"><i class="fas fa-female icons-for-mobile-view" style="border: none"></i>Mesdames</a></li>
+                            <li class="000010"><a href="ateliers.html"><i class="fas fa-building icons-for-mobile-view" style="border: none"></i>Ateliers</a></li>
+                            <li class="00006"><a href="articles.html"><i class="fas fa-check icons-for-mobile-view" style="border: none"></i>Articles</a></li>
+                            <li class="00009"><a href="ouvrages.html"><i class="fas fa-people-carry icons-for-mobile-view" style="border: none"></i>Ouvrages</a></li>
+                            <li class="00008"><a href="contact.html"><i class="fas fa-address-card icons-for-mobile-view" style="border: none"></i>Contacts</a></li>
 						</ul>                    </div>
                 </div>
             </div>
