--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<header data-menu-anima="fade-in">
         <div class="navbar navbar-default" role="navigation">
 			<div class="navbar-mini">
-                <div class="container">
+                <div class="container ">
                     <div class="nav navbar-nav navbar-left">
                         
                         <span><i class="fa fa-envelope-o"></i><a href="mailto:contact@poureussir.com">contact@poureussir.com</a></span>
@@ -52,13 +52,14 @@
                         </div>
                     </div>
                 </div>
-            </div>            <div class="navbar navbar-main mega-menu-fullwidth">
-                <div class="container ">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle">
+            </div>           
+             <div class="navbar navbar-main mega-menu-fullwidth navbar-changes" > 
+                <div class="container container-changes ">
+                    <div class="navbar-header navbar-header-changes">
+                        <button type="button" class="navbar-toggle toggle-button-changes">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="public/Site/images/logo.png" alt="logo" /> </a>
+                        <a class="navbar-brand toggle-logo-changes" href="index.html"><img src="public/Site/images/logo.png" alt="logo" /> </a>
                     </div> 
                     <div class="collapse navbar-collapse my-main-menu ">
 						<ul class="nav navbar-nav">
@@ -86,7 +87,8 @@
                             <li class="00006"><a href="articles.html"><i class="fas fa-check icons-for-mobile-view" style="border: none"></i>Articles</a></li>
                             <li class="00009"><a href="ouvrages.html"><i class="fas fa-people-carry icons-for-mobile-view" style="border: none"></i>Ouvrages</a></li>
                             <li class="00008"><a href="contact.html"><i class="fas fa-address-card icons-for-mobile-view" style="border: none"></i>Contacts</a></li>
-						</ul>                    </div>
+                        </ul>                   
+                     </div>
                 </div>
             </div>
         </div>
@@ -106,7 +108,7 @@
                                     <div class="container-inner text-left">
                                         <hr class="space m visible-sm" />
                                         <div class="row">
-                                            <div class="col-md-4 anima slide-box" style="background: ">
+                                            <div class="col-md-4 anima slide-box">
                                                 <h1 class="text-m text-normal text-m-xs">POUR RÉUSSIR</h1>
                                                 <h2 class="text-xl">Trouvez le meilleur en vous !</h2>
                                                 <hr class="space l" />
