--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     <link rel="stylesheet" href="public/Site/HTWF/css/new.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
 
 	
 </head>
